# pyfilename

./: .gitignore  README.md  build.py  codes.ipynb  pyproject.toml  requirements.txt  setup.py
pyfilename/: __init__.py  main.py  pyfilename.py
test/: __init__.py  test.py
tests/: test_isreserved.py  test_pyfilename.py
